force-app/main/default/objects/Deadline__c/Deadline__c.object-meta.xml
<CustomObject>
    <label>Deadline</label>
    <nameField>
        <displayFormat>DL-{00000}</displayFormat>
        <label>Deadline</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deadlines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>