force-app/main/default/objects/Deadline__c/fields/Custom_Media__c.field-meta.xml
<CustomField>
    <fullName>Custom_Media__c</fullName>
    <label>Content Studio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Special Report</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>