force-app/main/default/objects/Deadline__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Deadline Date</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>