force-app/main/default/objects/Deadline__c/fields/External_Internal__c.field-meta.xml
<CustomField>
    <fullName>External_Internal__c</fullName>
    <label>External / Internal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
                <default>true</default>
                <label>External</label>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>