force-app/main/default/objects/Deadline__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Custom_Media__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Call for Nominations End</fullName>
            </value>
            <value>
                <fullName>Call for Nominations Start</fullName>
            </value>
            <value>
                <fullName>Complete Draft from Writer</fullName>
            </value>
            <value>
                <fullName
        >Deliver Survey Results Internally and to Writer</fullName>
                <label>Deliver Survey Results Internally and to Writer</label>
            </value>
            <value>
                <fullName>Editorial Briefings End</fullName>
            </value>
            <value>
                <fullName>Feedback on designed proof due</fullName>
            </value>
            <value>
                <fullName>Feedback on draft due</fullName>
            </value>
            <value>
                <fullName>Feedback on outline due</fullName>
            </value>
            <value>
                <fullName>Final PDF</fullName>
            </value>
            <value>
                <fullName>Final PDF/To Printer</fullName>
            </value>
            <value>
                <fullName>Final Sales Deadline</fullName>
            </value>
            <value>
                <fullName>Hard Copy Drop Date</fullName>
            </value>
            <value>
                <fullName>Last Day to Come in with Logo</fullName>
            </value>
            <value>
                <fullName
        >Last day to Provide Materials for Solution Spotlight</fullName>
                <label
        >Last day to Provide Materials for Solution Spotlight</label>
            </value>
            <value>
                <fullName>Last day to Submit Completed ad</fullName>
            </value>
            <value>
                <fullName>Launch Survey</fullName>
            </value>
            <value>
                <fullName>Outline</fullName>
            </value>
            <value>
                <fullName>Outline from writer</fullName>
            </value>
            <value>
                <fullName>Public Sector Interviews End</fullName>
            </value>
            <value>
                <fullName>Report to Design</fullName>
            </value>
            <value>
                <fullName>Sales Kick-off</fullName>
            </value>
            <value>
                <fullName>Send designed proof to client</fullName>
            </value>
            <value>
                <fullName>Send draft to client</fullName>
            </value>
            <value>
                <fullName>Send outline to client</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>