force-app/main/default/objects/Deadline__c/recordTypes/Deadlines_Custom_Media.recordType-meta.xml
<RecordType>
    <fullName>Deadlines_Custom_Media</fullName>
    <active>true</active>
    <label>Deadlines - Content Studio</label>
</RecordType>