force-app/main/default/objects/Deadline__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Type__c</columns>
    <columns>Project__c</columns>
    <columns>Custom_Pub__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>